--- a/starwars/about/templates/about.html
+++ b/starwars/about/templates/about.html
@@ -1,10 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}<div id="content">
-    <table id="content-tbl">
+    <table id="about-tbl">
         <tbody>
             <tr>
-                <td id="content-tbl-center"><h1>About</h1></td>
+                <td id="about-tbl-lhs">
+                    <img src="http://localhost/#"/>
+                </td>
+                
+                <td id="about-tbl-rhs">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer id mauris dignissim ipsum luctus dignissim. Curabitur lobortis iaculis ullamcorper. Etiam vel nibh eget metus imperdiet gravida. Vestibulum quam est, pellentesque in molestie vel, laoreet at nibh. Sed vitae sem neque. Donec at lorem erat, non blandit eros. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat vulputate mattis. Sed sit amet pulvinar est. Pellentesque in dui velit, sed sodales erat. Aenean commodo fermentum magna, eu faucibus lectus euismod vitae. Cras dignissim nulla nec purus sodales vitae vulputate nunc tincidunt. Maecenas augue nunc, condimentum sed rutrum vel, sollicitudin sit amet justo. Curabitur pulvinar nunc quis lorem congue at aliquet velit elementum. Aenean lacus metus, pulvinar sit amet mattis id, pulvinar nec ipsum.</p>
+                    <br>
+                    <p>Aenean eget orci lectus. Pellentesque nec risus ut diam pharetra ullamcorper. Nullam congue, odio id fermentum dictum, quam urna scelerisque lacus, sed laoreet metus augue et urna. Aliquam blandit mauris vel ligula pretium accumsan. Donec tincidunt nisi sed turpis dignissim sodales quis ut felis. In hac habitasse platea dictumst. Fusce dictum lacus eget risus viverra sit amet pharetra ipsum fermentum. Duis non lacus ac tortor consectetur fringilla vitae a ipsum. Vestibulum imperdiet, eros consectetur vehicula dignissim, dui justo aliquet mi, porttitor mattis diam lorem id neque. Cras posuere magna at dui sodales at iaculis orci bibendum. In hac habitasse platea dictumst. Nullam sed dolor odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas non tempor odio. Suspendisse mollis turpis nec nibh lobortis pellentesque. Fusce at tellus nulla, non posuere arcu. Pellentesque quis lectus ligula, id convallis purus. Mauris risus lorem, fringilla id condimentum lacinia, auctor vel tellus. Maecenas eget odio orci.</p>
+                    <br>
+                    <p>Mauris lorem quam, commodo venenatis pellentesque posuere, bibendum eget sem. Fusce scelerisque hendrerit enim, id vestibulum urna tempus et. Curabitur rutrum nibh in sapien luctus et tempor velit mollis. Vivamus nibh odio, auctor quis hendrerit at, venenatis at mi. Phasellus lacus magna, convallis facilisis condimentum vitae, pretium vitae orci. Morbi id sapien tortor, vitae fermentum urna. Nullam hendrerit feugiat justo, quis accumsan lorem mattis ac. Aliquam scelerisque eleifend diam, a consequat ante euismod non. Integer vestibulum ligula ut orci tincidunt quis pulvinar erat feugiat. Etiam eget eros urna, venenatis vestibulum nulla. In quam libero, congue eu accumsan quis, viverra lobortis lectus. Aenean id eros lacus, vitae aliquam mi. Fusce at lacus purus. Curabitur a magna dictum nisl aliquet fermentum. Sed eu luctus tortor.</p>
+                </td>
             </tr>
         </tbody>
     </table>
