--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -72,7 +72,7 @@
                                         <a href="{% url home:view.main %}">Home</a>
                                     </td>{% endblock %}
                                     {% block menu-about %}<td class="menu-tbl-item">
-                                        <a href="{% url about:master %}">About</a>
+                                        <a href="{% url about:default %}">About</a>
                                     </td>{% endblock %}
                                     {% block menu-comment %}<td class="menu-tbl-item">
                                         <a href="{% url comment:master %}">Comment</a>
