--- a/starwars/media/css/style.css
+++ b/starwars/media/css/style.css
@@ -771,6 +771,13 @@ div.gallery .imgs {
     color: #ffffff;
 }
 
+#footer a {
+    float: right;
+    position: relative;
+    top: -23px;
+    left: -6px;
+}
+
 /* -------------------------------------------------------------------------
  * Image Cache
  * ------------------------------------------------------------------------- */
