--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -133,6 +133,14 @@
 
     {% block footer %}<div id="footer">
         <p>&copy; 2010 &ndash; All Rights Reserved.</p>
+
+        <a href="http://www.djangoproject.com/">
+            <img src="http://media.djangoproject.com/img/badges/djangosite80x15_grey.gif"
+                 border="0"
+                 alt="A Django site."
+                 title="A Django site." />
+        </a>
+        
     </div>{% endblock %}
 
     <!-- ----------------------------------------------------------------------
