--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -300,7 +300,7 @@ var fnGalleryImageMagnifyOnClick = function (obj) {
             width: $(window).height() * fraction*imgRatio + 'px'
         }
 
-    css.cursor = 'default'
+    css.cursor = 'pointer'
     css.border = '4px solid highlight'
 
     $.blockUI ({
@@ -319,6 +319,7 @@ var fnGalleryImageMagnifyOnClick = function (obj) {
     fnGalleryImageCloseOnInit ();
     fnGalleryImageCloseOnHover ();
 
+    $('div.img.x-large').click ($.unblockUI);
     $('div.img .close').click ($.unblockUI);
     $('.blockOverlay').click ($.unblockUI);
 }
@@ -373,7 +374,7 @@ var fnGalleryImageInfoOnClick = function (obj) {
             width: $(window).height() * fraction*imgRatio + 'px'
         }
 
-    css.cursor = 'default'
+    css.cursor = 'pointer'
     css.border = '4px solid highlight'
 
     $.blockUI ({
@@ -392,6 +393,7 @@ var fnGalleryImageInfoOnClick = function (obj) {
     fnGalleryImageCloseOnInit ();
     fnGalleryImageCloseOnHover ();
 
+    $('div.img.x-info').click ($.unblockUI);
     $('div.img .close').click ($.unblockUI);
     $('.blockOverlay').click ($.unblockUI);
 }
@@ -652,7 +654,7 @@ $(window).resize (function () {
 --------------------------------------------------------------------------- -->
 
 {% block menu-ext %}
-<td class="menu-tbl-item spacer">
+<td class="menu-tbl-item spacer" onmouseover="$(this).css ('background', '#1f5967')">
 </td>
 
 <td class="menu-tbl-item icons">
@@ -684,7 +686,8 @@ $(window).resize (function () {
                                 <a href="{% url home:view.galleries-by-collection cc.id %}">{{ cc.nbsp|safe }}</a>
                             </td>{% endifequal %}{% endfor %}
 
-                            <td class="sub-menu-tbl-item spacer">
+                            <td class="sub-menu-tbl-item spacer"
+                                onmouseover="$(this).css ('background', '#948b54')">
                             </td>
 
                             {% ifequal type 'figure' %}
@@ -753,8 +756,14 @@ $(window).resize (function () {
                     <li>
                         <div id="img-id{{ image.id }}" title="{{ image.name }}" class="img">
                             <div class="content">
-                                <img alt="{{ image.name }} [H153:W248px]" src="{{ image.url }}"/>
+                                <img alt="{{ image.name }} [H153:W248px]" 
+                                     src="{{ image.url }}"
+                                     onclick="fnGalleryImageMagnifyOnClick ({
+                                        alt:'{{ image.name }}',
+                                        src:'{{ image.url_large }}'
+                                     })"/>
                             </div>
+
                             <div class="footer {{ gallery.color }}"></div>
                             
                             <div class="rating st"></div>
@@ -764,11 +773,17 @@ $(window).resize (function () {
                             <div class="rating qt"></div>
 
                             <div class="magnify" 
-                                 onclick="fnGalleryImageMagnifyOnClick ({alt:'{{ image.name }}', src:'{{ image.url_large }}'});">
+                                 onclick="fnGalleryImageMagnifyOnClick ({
+                                    alt:'{{ image.name }}',
+                                    src:'{{ image.url_large }}'
+                                 });">
                             </div>
                             
                             <div class="info" 
-                                 onclick="fnGalleryImageInfoOnClick ({alt:'{{ image.name }}', src:'{{ image.url_info }}'});">
+                                 onclick="fnGalleryImageInfoOnClick ({
+                                    alt:'{{ image.name }}',
+                                    src:'{{ image.url_info }}'
+                                 });">
                             </div>
                         </div>
                     </li>{% endfor %}
