--- a/starwars/media/css/style.css
+++ b/starwars/media/css/style.css
@@ -130,6 +130,7 @@ body {
 .menu-tbl-item.spacer {
     width: 100%;
 }
+
 /* -------------------------------------------------------------------------
  * Menu: Icons
  * ------------------------------------------------------------------------- */
@@ -459,6 +460,10 @@ div.gallery .img {
     color: white;
 }
 
+div.gallery .img {
+    cursor: pointer;
+}
+
 /* -------------------------------------------------------------------------
  * Gallery: Image Content
  * ------------------------------------------------------------------------- */
@@ -585,6 +590,10 @@ div.gallery .img .magnify {
     cursor: pointer;
 }
 
+div.gallery .img .magnify {
+    display: none;
+}
+
 /* -------------------------------------------------------------------------
  * Gallery: Image Info
  * ------------------------------------------------------------------------- */
@@ -595,7 +604,7 @@ div.gallery .img .info {
     width: 32px;
     position: relative;
     top: -28px;
-    left: 32px;
+    left: 0px;
 }
 
 div.gallery .img .info {
