--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -139,11 +139,8 @@
 
         <a href="http://www.djangoproject.com/">
             <img src="http://media.djangoproject.com/img/badges/djangosite80x15_grey.gif"
-                 border="0"
-                 alt="A Django site."
-                 title="A Django site." />
-        </a>
-        
+                 border="0" alt="A Django site." title="A Django site."/>
+        </a>        
     </div>{% endblock %}
 
     <!-- ----------------------------------------------------------------------
