--- a/starwars/templates/base.html
+++ b/starwars/templates/base.html
@@ -152,8 +152,9 @@
         <p>&copy; 2010 &ndash; All Rights Reserved.</p>
 
         <a href="http://www.djangoproject.com/">
-            <img src="http://media.djangoproject.com/img/badges/djangosite80x15_grey.gif"
-                 border="0" alt="A Django site." title="A Django site."/>
+            <img src="{{ MEDIA_URL }}img/django-site.gif"
+                 border="0" alt="A Django Site" title="A Django Site"
+                 style="margin-top: 1px;"/>
         </a>        
     </div>{% endblock %}
 
