--- a/starwars/media/css/style.css
+++ b/starwars/media/css/style.css
@@ -41,8 +41,24 @@ body {
     padding: 5px;
 }
 
+#title-lhs img {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-small;
+    font-weight: normal;
+    color: white;
+}
+
 #title-rhs {
     padding: 5px;
+}
+
+#title-rhs img {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-small;
+    font-weight: normal;
+    color: white;
 }
 
 /* -------------------------------------------------------------------------
@@ -734,6 +750,14 @@ div.gallery .imgs {
     width: 256px;
 }
 
+#about-tbl-lhs img {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-small;
+    font-weight: normal;
+    color: white;
+}
+
 #about-tbl-rhs {
     vertical-align: middle;
     border-left: 1px solid white;
@@ -752,6 +776,68 @@ div.gallery .imgs {
     font-size: small;
     color: white;
     margin: 2px;
+}
+
+/* -------------------------------------------------------------------------
+ * Contact:
+ * ------------------------------------------------------------------------- */
+
+#contact-tbl {
+    height: auto;
+    width: 100%;
+}
+
+#contact-tbl {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-small;
+    font-weight: normal;
+    color: white;
+}
+
+#contact-tbl-lhs {
+    vertical-align: middle;
+    border-right: 1px solid white;
+    width: 33%;
+}
+
+#contact-tbl-lhs img {
+    height: 316px;
+    width: 256px;
+}
+
+#contact-tbl-rhs {
+    vertical-align: top;
+    border-left: 1px solid white;
+    height: 480px;
+    width: 67%;
+}
+
+/* ------------------------------------------------------------------------- */
+
+#contact-tbl-rhs .contact {
+    height: 100%;
+}
+
+#contact-tbl-rhs .contact .table {
+    width: 100%;
+    height: 100%;
+    font-size: x-small;
+    font-weight: normal;
+    color: white;
+}
+
+#contact-tbl-rhs .contact .input-cell {
+    width: 93%;
+}
+
+#contact-tbl-rhs .contact .input {
+    width: 100%;
+}
+
+#contact-tbl-rhs .contact .textarea {
+    width: 100%;
+    height: 100%;
 }
 
 /* -------------------------------------------------------------------------
