larger email icon

--- a/starwars/contact/templates/contact.html
+++ b/starwars/contact/templates/contact.html
@@ -7,12 +7,15 @@
                 <td id="contact-tbl-lhs">
                     <img alt="Send Email" 
                          src="{{ MEDIA_URL }}img/email-send.png"
-                         style="width: 128px; height: 128px;"/>
+                         style="width: 196px; height: 196px;"/>
                 </td>
 
                 <td id="contact-tbl-rhs">
                     <div class="contact">
-                    <form action="MAILTO:serdarkalfa@hotmail.com" method="post" enctype="text/plain">
+                    <form action="MAILTO:serdarkalfa@hotmail.com" 
+                          method="post"
+                          enctype="text/plain">
+                    
                     <table class="table">
 
                         <tr>
@@ -35,7 +38,10 @@
 
                         <tr>
                             <td colspan=2>
-                            <textarea class="textarea" type="text" name="comment" rows="20" cols="64"></textarea>
+                            <textarea class="textarea" 
+                                      name="comment"
+                                      rows="20"
+                                      cols="64"></textarea>
                             </td>
                         </tr>
 
