--- a/starwars/contact/templates/contact.html
+++ b/starwars/contact/templates/contact.html
@@ -12,8 +12,7 @@
 
                 <td id="contact-tbl-rhs">
                     <div class="contact">
-                    <form action="MAILTO:serdarkalfa@hotmail.com" 
-                          method="post"
+                    <form method="post"
                           enctype="text/plain">
                     
                     <table class="table">
