--- a/starwars/contact/templates/contact.html
+++ b/starwars/contact/templates/contact.html
@@ -12,7 +12,7 @@
 
                 <td id="contact-tbl-rhs">
                     <div class="contact">
-                    <form action="/contact/" method="post">{% csrf_token %}
+                    <form action="{% url contact:default %}" method="post">{% csrf_token %}
                     
                     <table class="table">
 
