--- a/starwars/comment/templates/comment.html
+++ b/starwars/comment/templates/comment.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}<div id="content">
-    <table id="content-tbl">
+    <table id="comment-tbl">
         <tbody>
             <tr>
-                <td id="content-tbl-center"><h1>Comment</h1></td>
+                <td id="comment-tbl-lhs">
+                    <div/>
+                </td>
+
+                <td id="comment-tbl-rhs">
+                    <div/>
+                </td>
             </tr>
         </tbody>
     </table>
