--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -380,7 +380,7 @@ var fnGalleryImageInfoOnClick = function (obj) {
     $.blockUI ({
         message: (
             '<div class="img x-info">' +
-                '<img alt="{0} [info; H1.00:W?.??]" src="{1}"/>' +
+                '<img alt="{0} [info; H1.00:W1.62]" src="{1}"/>' +
                 '<div class="close" style="top:-{0};"/>'.format(
                     css.height
                 ) +
