--- a/starwars/comment/templates/comment.html
+++ b/starwars/comment/templates/comment.html
@@ -14,20 +14,31 @@
 var fnCommentAreaOnInit = function() {
 
     var lhsHeightDefault = 476;
-    var lhsHeight =
-        
+    var lhsHeight = parseInt(
         $('#comment-tbl-lhs .threads .thread').length * $(
             '#comment-tbl-lhs .threads .thread'
-        ).outerHeight ();
+        ).outerHeight ()
+    );
 
-    if (lhsHeight < lhsHeightDefault) { lhsHeight = lhsHeightDefault }
+    if (lhsHeight < lhsHeightDefault)
+    {
+        lhsHeight = lhsHeightDefault;
+    };
 
     $('#comment-tbl-lhs .threads').css (
         'height', lhsHeight
     );
 
+    var rhsHeight = parseInt (
+        {% if form %}
+        $('#comment-tbl-rhs .contact').css ('height')
+        {% else %}
+        -4
+        {% endif %}
+    );
+
     $('#comment-tbl-rhs .comments').css (
-        'height', lhsHeight
+        'height', lhsHeight - rhsHeight - 4
     );
 }
 
@@ -50,6 +61,7 @@ $(window).resize (function () {
 --------------------------------------------------------------------------- -->
 
 {% block content %}<div id="content">
+
     <table id="comment-tbl">
         <tbody>
             <tr>
@@ -82,8 +94,51 @@ $(window).resize (function () {
                     </li>
                     {% endfor %}
                     </ul>
+
+                    {% if form %}
+                    <div class="contact">
+                    <form action="{% url comment:thread thread_id %}" method="post">{% csrf_token %}
+                    <table class="table">
+
+                        <tr>
+                            <td align="center">
+                            <b>&middot; Name &middot;</b>
+                            </td>
+                            <td class="input-cell {% if form.sender.errors %}invalid{% endif %}">
+                            {{ form.sender }}
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td align="center">
+                            <b>&middot; Email &middot;</b>
+                            </td>
+
+                            <td class="input-cell {% if form.email.errors %}invalid{% endif %}">
+                            {{ form.email}}
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="input-area {% if form.message.errors %}invalid{% endif %}" colspan=2>
+                            {{ form.message }}
+                            </td>
+                        </tr>
+
+                        <tr align="right">
+                            <td colspan=2>
+                            <input type="submit" value="Send">
+                            <input type="reset" value="Reset">
+                            </td>
+                        </tr>
+
+                    </table>
+                    </form>
+                    </div>
+                    {% endif %}
                 </td>
             </tr>
         </tbody>
     </table>
+
 </div>{% endblock %}
