--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -79,30 +79,6 @@ fnGalleryIconLayoutOnClick = function () {
 $(document).ready (fnGalleryIconLayoutOnClick);
 
 /* -------------------------------------------------------------------------
- * Gallery: Type
- * ------------------------------------------------------------------------- */
-
-fnGalleryTypeFiguresOnClick = function () {
-    $('#gallery-type-figures').click (function (event) {
-        $.post ('{% url home:ajax.show-figures %}', function (data) {
-            location.reload ();
-        });
-    });
-}
-
-$(document).ready (fnGalleryTypeFiguresOnClick);
-
-fnGalleryTypeVehiclesOnClick = function () {
-    $('#gallery-type-vehicles').click (function (event) {
-        $.post ('{% url home:ajax.show-vehicles %}', function (data) {
-            location.reload ();
-        });
-    });
-}
-
-$(document).ready (fnGalleryTypeVehiclesOnClick);
-
-/* -------------------------------------------------------------------------
  * Gallery: Area
  * ------------------------------------------------------------------------- */
 
@@ -692,21 +668,21 @@ $(window).resize (function () {
 
                             {% ifequal type 'figure' %}
                             <td class="sub-menu-tbl-item rhs active">
-                                <a href="#" id="gallery-type-figures">Figures</a>
+                                <a href="{% url home:view.show-figures collection.id %}" id="gallery-type-figures">Figures</a>
                             </td>
                             {% else %}
                             <td class="sub-menu-tbl-item rhs">
-                                <a href="#" id="gallery-type-figures">Figures</a>
+                                <a href="{% url home:view.show-figures collection.id %}" id="gallery-type-figures">Figures</a>
                             </td>
                             {% endifequal %}
                             
                             {% ifequal type 'vehicle' %}
                             <td class="sub-menu-tbl-item rhs active">
-                                <a href="#" id="gallery-type-vehicles">Vehicles</a>
+                                <a href="{% url home:view.show-vehicles collection.id %}" id="gallery-type-vehicles">Vehicles</a>
                             </td>
                             {% else %}
                             <td class="sub-menu-tbl-item rhs">
-                                <a href="#" id="gallery-type-vehicles">Vehicles</a>
+                                <a href="{% url home:view.show-vehicles collection.id %}" id="gallery-type-vehicles">Vehicles</a>
                             </td>
                             {% endifequal %}
 
