--- a/starwars/comment/templates/comment.html
+++ b/starwars/comment/templates/comment.html
@@ -127,7 +127,7 @@ $(window).resize (function () {
 
                         <tr align="right">
                             <td colspan=2>
-                            <input type="submit" value="Send">
+                            <input type="submit" value="Send" onclick="$.blockUI()">
                             <input type="reset" value="Reset">
                             </td>
                         </tr>
