Have renamed 'comment' to 'forum'

--- a/swmm-cms/templates/base.html
+++ b/swmm-cms/templates/base.html
@@ -98,8 +98,8 @@
                                     {% block menu-about %}<td class="menu-tbl-item">
                                         <a href="{% url about:default %}">About</a>
                                     </td>{% endblock %}
-                                    {% block menu-comment %}<td class="menu-tbl-item">
-                                        <a href="{% url comment:default %}">Comment</a>
+                                    {% block menu-forum %}<td class="menu-tbl-item">
+                                        <a href="{% url forum:default %}">Forum</a>
                                     </td>{% endblock %}
                                     {% block menu-contact %}<td class="menu-tbl-item">
                                         <a href="{% url contact:default %}">Contact</a>
