--- a/swmm-cms/forum/templates/forum.html
+++ b/swmm-cms/forum/templates/forum.html
@@ -69,7 +69,7 @@ $(window).resize (function () {
                     <ul class="threads">
                     {% for thread in threads %}
                     <li class="thread {% cycle 'oodd' 'even' %}">
-                        <a href="{% url comment:thread thread.id %}">
+                        <a href="{% url forum:thread thread.id %}">
                             {{ thread.name }}
                         </a>
                     </li>
@@ -97,7 +97,7 @@ $(window).resize (function () {
 
                     {% if form %}
                     <div class="contact">
-                    <form action="{% url comment:thread thread_id %}" method="post">{% csrf_token %}
+                    <form action="{% url forum:thread thread_id %}" methud="post">{% csrf_token %}
                     <table class="table">
 
                         <tr>
