--- a/swmm-cms/forum/templates/forum.html
+++ b/swmm-cms/forum/templates/forum.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
-<!-- --------------------------------------------------------------------------
+<!-- ------------------------------------------------------------------------------------------
 + JavaScript Ext:
---------------------------------------------------------------------------- -->
+------------------------------------------------------------------------------------------- -->
 
 {% block javascript-ext %}
 <script type="text/javascript">
 
-/* -------------------------------------------------------------------------
+/* --------------------------------------------------------------------------------------------
  * Comment: Area
- * ------------------------------------------------------------------------- */
+ * ----------------------------------------------------------------------------------------- */
 
 var fnCommentAreaOnInit = function() {
 
@@ -30,11 +30,7 @@ var fnCommentAreaOnInit = function() {
     );
 
     var rhsHeight = parseInt (
-        {% if form %}
-        $('#comment-tbl-rhs .contact').css ('height')
-        {% else %}
-        -4
-        {% endif %}
+        {% if form %} $('#comment-tbl-rhs .contact').css ('height') {% else %} -4 {% endif %}
     );
 
     $('#comment-tbl-rhs .comments').css (
@@ -44,9 +40,9 @@ var fnCommentAreaOnInit = function() {
 
 $(document).ready (fnCommentAreaOnInit);
 
-/* -------------------------------------------------------------------------
+/* --------------------------------------------------------------------------------------------
  * Window: Resize
- * ------------------------------------------------------------------------- */
+ * ----------------------------------------------------------------------------------------- */
 
 $(window).resize (function () {
     fnCommentAreaOnInit ();
@@ -97,7 +93,7 @@ $(window).resize (function () {
 
                     {% if form %}
                     <div class="contact">
-                    <form action="{% url forum:thread thread_id %}" methud="post">{% csrf_token %}
+                    <form action="{% url forum:thread thread_id %}" method="post">{% csrf_token %}
                     <table class="table">
 
                         <tr>
