Using minified jquery v1.4.2 instead of jquery's git repository.

--- a/swmm-cms/templates/base.html
+++ b/swmm-cms/templates/base.html
@@ -179,7 +179,7 @@
 --------------------------------------------------------------------------- -->
 
 {% block java-script %}
-<script type="text/javascript" src="{{ MEDIA_URL }}lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.min.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.blockUI.min.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/util.min.js"></script>
 {% endblock %}
